chore: yarn workspace 설정

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "packageManager": "yarn@4.6.0",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.3"
+  }
 }
